# ZIoVPO_Client

./: .gitignore  CMakeLists.txt  License.rtf  README.md  main.wxs
.github/workflows/: buildApp.yml
ClientApp/: CMakeLists.txt  ServiceClient.cpp  ServiceClient.h  TaskbarCreatedFilter.h  authdialog.cpp  authdialog.h  authdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  traymanager.cpp  traymanager.h
Common/: CMakeLists.txt  ServiceRpc.idl
Service/: CMakeLists.txt
Service/include/: AuthManager.h  HttpClient.h  LicenseManager.h  RpcServer.h  UiClientManager.h  Utils.h  WinService.h  pch.h
Service/src/: AuthManager.cpp  HttpClient.cpp  LicenseManager.cpp  RpcServer.cpp  UiClientManager.cpp  Utils.cpp  WinService.cpp  main.cpp
