cmake_minimum_required(VERSION 3.19)
project(ZIoVPO LANGUAGES CXX)

add_subdirectory(Common)
add_subdirectory(Service)
add_subdirectory(ClientApp)

set(CPACK_WIX_VERSION 3)
set(CPACK_GENERATOR "WIX")
set(CPACK_PACKAGE_NAME "ZIoVPO")
set(CPACK_PACKAGE_VENDOR "MTUSI")
set(CPACK_PACKAGE_VERSION "1.3.0")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "My application with Windows service")
set(CPACK_PACKAGE_INSTALL_DIRECTORY "ZIoVPO")
set(CPACK_OUTPUT_FILE_PREFIX "${CMAKE_BINARY_DIR}/packages")
set(CPACK_WIX_CULTURES "ru-RU")

set(CPACK_WIX_UPGRADE_GUID "023F919F-3F89-4F12-922D-83BD8D388006")
set(CPACK_WIX_PRODUCT_GUID "1228243E-C6D3-467B-BE71-EC46B4E26DD7")
set(CPACK_WIX_MANUFACTURER "MTUSI")
set(CPACK_WIX_LICENSE_RTF "${CMAKE_SOURCE_DIR}/license.rtf")
set(CPACK_WIX_PROPERTY_ARPCOMMENTS "ZIoVPO Service and Client")
set(CPACK_WIX_PRODUCT_ICON "${CMAKE_CURRENT_SOURCE_DIR}/ClientApp/resources/appIcon.ico")


set(VC_REDIST_MSM "C:/Program Files (x86)/Microsoft Visual Studio/2022/Community/VC/Redist/MSVC/v143/MergeModules/Microsoft_VC143_CRT_x64.msm")
if(EXISTS "${VC_REDIST_MSM}")
    set(CPACK_WIX_MERGE_MODULES "${VC_REDIST_MSM}")
endif()

set(CPACK_WIX_TEMPLATE "${CMAKE_SOURCE_DIR}/main.wxs")
set(CPACK_WIX_EXTENSIONS "WixUtilExtension")
set(CPACK_INSTALL_CMAKE_PROJECTS "${CMAKE_BINARY_DIR};ZIoVPO;ALL;/")
set(CPACK_WIX_PRODUCT_ARCH "x64")

include(CPack)